tests/fails/missingmethod.t

struct A {
}

terra foo()
	var a : A
	a:bar()
end

foo()